--- a/README
+++ b/README
@@ -3,22 +3,21 @@ xcmsdb
 X.Org X CMS Device Color Characterization utility
 
 Runtime requirements:
-  cygwin-1.7.0-62
-  libgcc1-4.3.4-1
-  libX11_6-1.3-1
+  cygwin-1.7.7-1
+  libX11_6-1.3.5-1
 
 Build requirements:
 (besides corresponding devel packages)
-  autoconf2.5-2.63-10
-  automake1.11-1.11-10
-  binutils-2.19.51-1
-  cygport-0.9.10-1
+  autoconf2.5-2.65-1
+  automake1.11-1.11.1-1
+  binutils-2.20.51-2
+  cygport-0.10.0-1
   gawk-3.1.7-1
-  gcc4-core-4.3.4-1
+  gcc4-core-4.5.0-1
   make-3.81-2
   pkg-config-0.23b-10
-  sed-4.1.5-2
-  xorg-util-macros-1.3.0-1
+  sed-4.2.1-1
+  xorg-util-macros-1.10.0-1
 
 Canonical website:
   http://xorg.freedesktop.org/
@@ -29,19 +28,22 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack xcmsdb-1.0.2-X-src.tar.bz2
+  unpack xcmsdb-1.0.3-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./xcmsdb-1.0.2-X.cygport all
+  cygport ./xcmsdb-1.0.3-X.cygport all
 
 This will create:
-  /usr/src/xcmsdb-1.0.2-X-src.tar.bz2
-  /usr/src/xcmsdb-1.0.2-X.tar.bz2
+  /usr/src/xcmsdb-1.0.3-X-src.tar.bz2
+  /usr/src/xcmsdb-1.0.3-X.tar.bz2
 
 -------------------------------------------
 
 Port Notes:
+
+----- version 1.0.3-1 -----
+Version bump for X11R7.6.
 
 ----- version 1.0.2-1 -----
 Version bump for X11R7.5.
